# codex-butler-relay

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  relay.py
docs/: relay-contract.md
evals/: evals.json
skills/butler-relay/: SKILL.md
skills/butler-relay/agents/: openai.yaml
tests/: test_relay.py
